add: img and text (completed)

--- a/index.html
+++ b/index.html
@@ -19,56 +19,68 @@
         <!-- First 3 columns section  -->
         <section>
             <p class="h-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum eveniet id ratione quis animi numquam earum nemo soluta odio tempora dignissimos ullam odit laborum delectus non rem, natus labore.</p>
-            <div class="row clearfix">
+            <div class="row ">
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/male1.png" alt="">
-                        <h3>MARCO BIANCHI</h3>
-                        <p>Designer</p>
-                        <p class="mail">marcobianchi@team.com</p>
+                        <div class="content">
+                            <h3>MARCO BIANCHI</h3>
+                            <p>Designer</p>
+                            <p class="mail">marcobianchi@team.com</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/female1.png" alt="">
-                        <h3>LAURA ROSSI</h3>
-                        <p>Front-end Developer</p>
-                        <p class="mail">laurarossi@team.com</p>
+                        <div class="content">
+                            <h3>LAURA ROSSI</h3>
+                            <p>Front-end Developer</p>
+                            <p class="mail">laurarossi@team.com</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/male2.png" alt="">
-                        <h3>GIORGIO VERDI</h3>
-                        <p>Back-end Developer</p>
-                        <p class="mail">giorgioverdi@team.com</p>
+                        <div class="content">
+                            <h3>GIORGIO VERDI</h3>
+                            <p>Back-end Developer</p>
+                            <p class="mail">giorgioverdi@team.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Second 3 columns section  -->
             <div class="row">
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/female2.png" alt="">
-                        <h3>MARTA IPSUM</h3>
-                        <p>SEO Specialist</p>
-                        <p class="mail">martaipsum@team.com</p>
+                        <div class="content">
+                            <h3>MARTA IPSUM</h3>
+                            <p>SEO Specialist</p>
+                            <p class="mail">martaipsum@team.com</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/male3.png" alt="">
-                        <h3>ROBERTO LOREM</h3>
-                        <p>Project Manager</p>
-                        <p class="mail">robertolorem@team.com</p>
+                        <div class="content">
+                            <h3>ROBERTO LOREM</h3>
+                            <p>Project Manager</p>
+                            <p class="mail">robertolorem@team.com</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card clearfix">
                         <img src="img/female3.png" alt="">
-                        <h3>DANIELA AMET</h3>
-                        <p>Analyst</p>
-                        <p class="mail">danielaamet@team.com</p>
+                        <div class="content">
+                            <h3>DANIELA AMET</h3>
+                            <p>Analyst</p>
+                            <p class="mail">danielaamet@team.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
